# allocation-instrumenter

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  build.xml  builddefs.bzl  pom.xml  rules.txt
java-allocation-instrumenter/: pom.xml
java-allocation-instrumenter/src/main/java/com/google/monitoring/runtime/instrumentation/: AllocationClassAdapter.java  AllocationInstrumenter.java  (+5 more)
release/: deploy-to-maven-central.sh  execute-deploy.sh
src/com/google/monitoring/runtime/instrumentation/: AllocationMethodAdapter.java  AllocationRecorder.java  Sampler.java  VerifyingClassAdapter.java
src/main/java/com/google/monitoring/runtime/instrumentation/: AllocationClassAdapter.java  AllocationInstrumenter.java  AllocationMethodAdapter.java  AllocationRecorder.java  BUILD  Bootstrap.java.in  ConstructorCallback.java  ConstructorInstrumenter.java  NullInstrumentation.java  Sampler.java  StaticClassWriter.java  VerifyingClassAdapter.java  jarjar_collect.txt  jarjar_guava.txt
src/test/java/com/google/monitoring/runtime/instrumentation/: AgentIntegrity.java  AllocationInstrumenterTest.java  AllocationInstrumenterVerifier.java  BUILD  ConstructorInstrumenterTest.java  Instrumentee.java  InstrumenterRefTest.java  InstrumentingClassLoader.java  MetaspaceExhaustionTest.java  agent_integrity_test.sh  build_big_java.sh
tools/: BUILD  maven.bzl  pom-template.xml
trunk/: build.xml
trunk/java-allocation-instrumenter/: pom.xml
trunk/src/com/google/monitoring/runtime/instrumentation/: AllocationInstrumenter.java  AllocationRecorder.java
wiki/: GettingStarted.wiki
(+10 files in other folders)
